--- a/goldcoin-blockchain-gui/package.json
+++ b/goldcoin-blockchain-gui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goldcoin-blockchain",
-  "author": "Pink Sheets Crypto <admin@pinksheetscrypto.com> (https://www.pinksheetscrypto.com/)",
+  "author": "Goldcoin Network <admin@goldoin-network.com> (https://www.goldcoin-network.com/)",
   "description": "GUI for Goldcoin Blockchain",
   "productName": "Goldcoin Blockchain",
   "private": true,
